--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,39 @@
 services:
   stats-server:
+    build: stat-service/stat-server
+    image: stat-server
+    container_name: stat-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
+      - SPRING_DATASOURCE_USERNAME=stat
+      - SPRING_DATASOURCE_PASSWORD=stat
+
 
   stats-db:
     image: postgres:16.1
-
-  ewm-service:
+    container_name: postgres
     ports:
-      - "8080:8080"
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=stat
+      - POSTGRES_USER=stat
+      - POSTGRES_DB=stat
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
-  ewm-db:
-    image: postgres:16.1
+    #    ewm-service:
+    # build: main-service
+    # image: evm-service
+    #  container_name: evm-service
+        #  ports:
+  #     - "8080:8080"
+
+#  ewm-db:
+#    image: postgres:16.1
